--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,4 +20,21 @@
     <script>
         $('.display-4').css('color','pink')
     </script>
+
+    <script>
+        const emp = {
+            "employees": [
+                { "name": "Tom", "workYears": 3, "salary": 35000 },
+                { "name": "Jack", "workYears": 5, "salary": 40000 },
+                { "name": "Mary", "workYears": 7, "salary": 45000 }
+            ]
+        };
+
+        for (let i = 0,max=emp.employees.length; i <max; i++){
+            console.log(emp.employees[i].name)
+            console.log(emp.employees[i].workYears)
+            console.log(emp.employees[i].salary)
+
+        }
+    </script>
 }
