--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,18 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-
+<div>
+    <table id="empTable" class="table table-bordered table-hover table-striped">
+        <thead>
+            <tr>
+                <th>姓名</th>
+                <th>年資</th>
+                <th>薪水</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+</div>
 
 @section Styles{
     <style>
@@ -35,5 +46,19 @@
             console.log(emp.employees[i].workYears)
             console.log(emp.employees[i].salary)
         }
+
+        const datas = emp.employees.map(employee=>{
+            const { name, workYears, salary } = employee
+            return (
+            `<tr>
+                <td>${name}</td>
+                <td>${workYears}</td>
+                <td>${salary}</td>
+             </tr>`
+            )
+        })
+        console.log(datas)
+      
+        document.querySelector('#empTable>tbody').innerHTML = datas.join("")
     </script>
 }
