--- a/Views/Members/Index.cshtml
+++ b/Views/Members/Index.cshtml
@@ -43,10 +43,12 @@
                 @Html.DisplayFor(modelItem => item.Age)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FileName)
+                    <img src="~/uploads/@item.FileName" class="img-thumbnail w-50" />
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FileData)
+                @*@Html.DisplayFor(modelItem => item.FileData)*@
+                    <img src="~/api/GetImageByte/@item.MemberId" class="img-thumbnail w-25">
+                    <img src="@Url.Action("GetImageByte", "Api",new{id=item.MemberId})" class="img-thumbnail w-25" />
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.MemberId">Edit</a> |
