--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業三+五</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業四(教室)</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Address">作業四</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業六(教室)</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業六</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業七(AutoComplete)</a>
