--- a/Views/Home/Fetch.cshtml
+++ b/Views/Home/Fetch.cshtml
@@ -35,6 +35,7 @@
         async function loadJson(){
             const response = await fetch('@Url.Content("/api/Cities")');
             const data = await response.json();
+            console.log(data);
             const list = data.map(d=>`<li>${d}</li>`)
                 document.querySelector('#ul1').innerHTML = list.join("")
         }
