--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddressAA">作業六</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">作業七(AutoComplete)</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AutoComplete">作業七</a>
                         </li>
                         </li>
                         <li class="nav-item">
